--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-How to run this project
+## How to run this project
 
 1. Install Expo Latest Version which is 50.0.7
 
@@ -9,15 +9,10 @@ How to run this project
 4. App will be start if not try reloading
 
 
-I will be also providing the API with the Mail 
-
-Pending Work
+### Pending Work
 
 1. Filters 
 
 2. Offline Mode 
 
 3. AutoPlay Trailer on Viewport (Viewport code has been done just that youtube link isn't supported to play a video by library)
-
-
-Thanks
